--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
         <div id="profile-view" style="display: none; text-align: center; max-width: 400px; margin: 0 auto;">
             <h2>Личный кабинет</h2>
             <img id="user-avatar" src="" alt="Avatar" style="width: 100px; height: 100px; border-radius: 50%; margin-bottom: 10px; border: 2px solid #007bff; object-fit: cover;">
+            <p id="bio-display" style="font-style: italic; color: #4a5568; font-size: 1.1rem; margin: 10px 0;">Загрузка...</p>
+
             <p><strong>Email (Postgres):</strong> <span id="user-email"></span></p>
     
             <input type="hidden" id="user-id-hidden">
